[project]
name = "scholar-md"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Chizhov",email = "mail@benpuls.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff (>=0.14.8,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
